<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/uno"
        android:title="@string/vista1"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/dos"
        android:title="@string/vista2"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/tres"
        android:title="@string/vista3"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/cuatro"
        android:title="@string/vista4"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/quinto"
        android:title="@string/vista5"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
